<resources>
    <string name="app_name">TiffinSeva</string>
    <string name="login_mobile_number">Mobile Number</string>
    <string name="login_screen_login">Login</string>
    <string name="login_dont_have_acc">Don’t have an account?</string>
    <string name="sign_up_register">Register</string>
    <string name="otp_title">Verification</string>
    <string name="otp_help_text">Please wait while we validate an OTP</string>
    <string name="otp_validate_text">Verify</string>
    <string name="otp_not_received">Didn\'t receive OTP?</string>
    <string name="resend_otp">Resend Again</string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="house_name_error">Add house name</string>
    <string name="road_name_error">Add Road name</string>
    <string name="landmark_name_error">Add Landmark</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="address_house_num">House Name / Flat</string>
    <string name="address_road_name">Colony / Street</string>
    <string name="address_landmark_name">LandMark</string>
    <string name="address_city_name">Select City</string>
    <string name="address_select_pinCode">Select PinCode</string>
    <string name="str_pincode">PinCode</string>
    <string name="address_select_state">Select State</string>
    <string name="request_tiffin">Request Tiffin</string>
    <string name="receive_tiffin">Receive a Tiffin</string>
    <string name="change_city">Change City</string>
    <string name="request_tiffin_btn">Request tiffin</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="loading_str">Loading</string>
    <string name="loading_city">Loading city name</string>
    <string name="no_of_tiffin">Number of tiffin</string>
    <string name="tiffin_date">Date</string>
    <string name="tiffin_requested">Requested Tiffin</string>
    <string name="tiffin_provided">Tiffin Provided</string>
    <string name="tiffin_request_btn">Request Tiffin</string>
    <string name="tiffin_provide_btn">Provide Tiffin</string>
    <string name="tiffin_request_success">Thanks for requesting tiffin</string>
    <string name="tiffin_provider_success">Thanks!!</string>
    <string name="tiffin_request_receive_address_error">Select address</string>
    <string name="tiffin_request_receive_data_error">Select date</string>
    <string name="tiffin_request_receive_tiffin_error">Add tiffin count</string>
    <string name="tiffin_request_receive_tiffin_count_error">Tiffin number should be less then 100</string>
    <string name="please_set_city">Please setup your address</string>
    <string name="add_new_addreess">Add New Address</string>
    <string name="city_chage">Your city has updated</string>
    <string name="str_terms_n_conds">I am following the social distancing rules while serving or requesting the tiffin</string>
    <string name="str_terms_n_conds_error">"Please select terms and conditions"</string>
    <string name="pincode_alert">Please add pincode of your area</string>
    <string name="valid_pincode_alert">Please enter valid pincode</string>
    <string name="invalid_pincode">Invalid pincode</string>
    <string name="pin_code_lenght_error">Invalid pincode length</string>
    <string name="valid_pincode">Valid pincode</string>
    <string name="address_city_state">%1$s, %2$s</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="str_home">Home</string>
    <string name="str_sign_out">Signout</string>
    <string name="str_settings">Settings</string>
    <string name="str_manage_tiffin">Manage tiffin</string>
    <string name="str_tiffin_requester">Tiffin Requesters</string>
    <string name="no_tiffin_provider">No Tiffin Providers are \n available in Your Area</string>
    <string name="no_tiffin_seeker">No one need \n Tiffin in Your Area</string>
    <string name="str_no_records">No Records found</string>
    <string name="str_no_tiffin_provider">No tiffin providers found in your area</string>
    <string name="str_no_tiffin_requester">No tiffin requesters found in your area</string>
</resources>
