<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginflow.verifyotpfragment.OtpVerificationFragment"
    android:background="#ffffff">

   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="@dimen/margin_50dp"
       app:srcCompat="@drawable/ic_otp_verification"
       android:id="@+id/ivOtpVerificationLogo"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/app_black"
        android:lineSpacingExtra="-2sp"
        android:gravity="center_horizontal"
        android:text="@string/otp_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOtpVerificationLogo"
        android:layout_marginTop="12dp"
        android:id="@+id/tvOtpVerificationTitle"
        />

    <TextView
        android:id="@+id/tvOtpVerificationHelp"
        style="@style/generalTextLabelsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:text="@string/otp_help_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOtpVerificationTitle" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="18dp"
        android:id="@+id/llOtpInputWrapper"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="22dp">
        <EditText
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/etOtp1"
            android:gravity="center"
            android:inputType="number"
            android:imeOptions="actionNext"

            android:maxLength="1"
            android:background="@drawable/edit_text_border"
            android:layout_marginRight="9dp" />
        <EditText
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/etOtp2"
            android:inputType="number"
            android:gravity="center"
            android:imeOptions="actionNext"

            android:maxLength="1"
            android:background="@drawable/edit_text_border"
            android:layout_marginRight="9dp"/>
        <EditText
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/etOtp3"
            android:inputType="number"
            android:gravity="center"
            android:imeOptions="actionNext"

            android:maxLength="1"
            android:background="@drawable/edit_text_border"
            android:layout_marginRight="9dp"/>
        <EditText
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/etOtp4"
            android:inputType="number"
            android:gravity="center"
            android:imeOptions="actionNext"

            android:maxLength="1"
            android:background="@drawable/edit_text_border"
            android:layout_marginRight="9dp" />

        <EditText
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/etOtp5"
            android:inputType="number"
            android:gravity="center"
            android:imeOptions="actionNext"

            android:maxLength="1"
            android:background="@drawable/edit_text_border"
            android:layout_marginRight="9dp" />
        <EditText
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:imeOptions="actionDone"

            android:maxLength="1"
            android:gravity="center"
            android:id="@+id/etOtp6"
            android:background="@drawable/edit_text_border" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerifyOtp"
        style="@style/buttonStyle"
        android:layout_width="295dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/otp_validate_text"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOtpInputWrapper" />

    <TextView
        android:id="@+id/tvDidNotGetOtp"
        style="@style/generalTextLabelsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/otp_not_received"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintRight_toLeftOf="@id/tvResendOtp"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyOtp" />

    <TextView
        android:id="@+id/tvResendOtp"
        style="@style/generalTextLabelsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/resend_otp"
        android:textColor="@color/orange"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDidNotGetOtp"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyOtp" />
    <TextView
        android:id="@+id/tvTimer"
        style="@style/generalTextLabelsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDidNotGetOtp"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyOtp" />

</androidx.constraintlayout.widget.ConstraintLayout>